manifests/transmission/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    app: transmission
