manifests/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
  labels:
    app: transmission
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
  - name: web
    port: 9091
    protocol: TCP
    targetPort: 9091
