manifests/transmission/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: transmission-ingress
  namespace: transmission
spec:
  rules:
  - host: transmission.localdomain
    http:
      paths:
      - backend:
          service:
            name: transmission
            port:
              name: web
        path: /
        pathType: Prefix
